pricing and cosmetic

--- a/Fetch1/customer/1_requestDelivery/requestDelivery.html
+++ b/Fetch1/customer/1_requestDelivery/requestDelivery.html
@@ -5,11 +5,11 @@
 			<div class="short"></div>
 			PACKAGE SIZE
 			<br />
-			<button class="medium skinnier dark fa fa-envelope" ng-click="demo.setSize('small');" ng-class="demo.data.size==='small' ? 'selected' : 'x'"></button>
+			<button class="medium skinnier dark" ng-click="demo.setSize('small');" ng-class="demo.data.size==='small' ? 'selected' : 'x'">Small</button>
 			<span class="skinniest"></span>
-			<button class="medium skinnier dark fa fa-gift" ng-click="demo.setSize('medium');" ng-class="demo.data.size==='medium' ? 'selected' : 'x'"></button>
+			<button class="medium skinnier dark" ng-click="demo.setSize('medium');" ng-class="demo.data.size==='medium' ? 'selected' : 'x'">Medium</button>
 			<span class="skinniest"></span>
-			<button class="medium skinnier dark fa fa-bicycle" ng-click="demo.setSize('large');" ng-class="demo.data.size==='large' ? 'selected' : 'x'"></button>
+			<button class="medium skinnier dark" ng-click="demo.setSize('large');" ng-class="demo.data.size==='large' ? 'selected' : 'x'">Large</button>
 			<div class="short"></div>
 			<div class="window">
 				<table style="width: 99%;">
