--- a/Fetch1/driver/3_startDelivery/startDelivery.html
+++ b/Fetch1/driver/3_startDelivery/startDelivery.html
@@ -18,7 +18,6 @@
 		</button>
 
 		<div class="short"></div>
-		<img ng-src="{{ start.dropSrc }}" class="wide" />
-		<img ng-src="{{ start.pickSrc }}" class="wide" />
+		<img ng-src="{{ start.pickSrc }}" class="wide" /><img ng-src="{{ start.dropSrc }}" class="wide" />
 	</div>
 </div>
