--- a/Fetch1/customer/2_1_deliveryVerification/deliveryVerification.html
+++ b/Fetch1/customer/2_1_deliveryVerification/deliveryVerification.html
@@ -4,25 +4,25 @@
 		<div class="short"></div>
 		PLEASE VERIFY INFO FOR ACCURACY
 		<div class="short"></div>
-		<button class="skinnier medium dark">Small</button>
+		<button class="skinnier medium dark fa fa-archive"></button>
 		<span class="skinniest"></span>
 		<div class="window medium wider">
 			I have a {{ demo.data.size }} {{ demo.data.weight }} lb package
 		</div>
 		<div class="short"></div>
-		<button class="skinnier medium dark">Medium</button>
+		<button class="skinnier medium dark fa fa-arrow-down"></button>
 		<span class="skinniest"></span>
 		<div class="window medium wider">
 			Package to be picked up from {{ demo.data.pickup }}
 		</div>
 		<div class="short"></div>
-		<button class="skinnier medium dark">Large</button>
+		<button class="skinnier medium dark fa fa-arrow-right"></button>
 		<span class="skinniest"></span>
 		<div class="window medium wider">
 			Package will be delivered to {{ demo.data.delivery }}
 		</div>
 		<div class="short"></div>
-		<button class="skinnier medium dark">$</button>
+		<button class="skinnier medium dark fa fa-usd"></button>
 		<span class="skinniest"></span>
 		<div class="window medium wider">
 			Cost of shipment ${{ demo.data.price }}
