better resume on mid delivery

--- a/Fetch1/customer/1_requestDelivery/requestDelivery.html
+++ b/Fetch1/customer/1_requestDelivery/requestDelivery.html
@@ -1,4 +1,4 @@
-﻿<div class="hidden">{{ page.theme = 'lighter'; page.title = 'MY DELIVERY INFORMATION'; }}</div>
+﻿<div class="hidden">{{ page.theme = 'darker'; page.title = 'MY DELIVERY INFORMATION'; }}</div>
 <div ng-controller="DeliveryCtrl as demo">
 	<div ng-controller="RequestDeliveryController as delivery">
 		<form ng-keyup="enableNext = delivery.validatePage()" ng-init="enableNext = delivery.validatePage()">
