--- a/Fetch1/customer/2_1_deliveryVerification/deliveryVerification.html
+++ b/Fetch1/customer/2_1_deliveryVerification/deliveryVerification.html
@@ -1,4 +1,4 @@
-﻿<div class="hidden">{{ page.theme = 'lighter'; }}</div>
+﻿<div class="hidden">{{ page.theme = 'darker'; }}</div>
 	<div ng-controller="DeliveryCtrl as demo">
 	<div ng-controller="DeliveryVerificationCtrl as delivery" ng-init="delivery.calculateCost(demo)">
 		<div class="short"></div>
