--- a/Fetch1/customer/2_5_findDriver/findDriver.html
+++ b/Fetch1/customer/2_5_findDriver/findDriver.html
@@ -1,4 +1,4 @@
-﻿<div class="hidden">{{ page.disableBack = true; page.theme = 'lighter'; }}</div>
+﻿<div class="hidden">{{ page.disableBack = true; page.theme = 'darker'; }}</div>
 <div ng-controller="FindDriverCtrl as driver">
 	<div ng-controller="DeliveryCtrl as demo" ng-init="driver.init(demo.data)">
 		<div class="tall"></div>
