--- a/Fetch1/driver/2_viewDeliver/viewDelivery.html
+++ b/Fetch1/driver/2_viewDeliver/viewDelivery.html
@@ -1,4 +1,4 @@
-﻿<div class="hidden">{{ page.theme = 'lighter'; page.title = 'DELIVERY' }}</div>
+﻿<div class="hidden">{{ page.theme = 'darker'; page.title = 'DELIVERY' }}</div>
 	<div ng-controller="DeliveryCtrl as demo">
 		<div ng-controller="ViewDeliveryControler as config">
 			<div class="short"></div>
