--- a/Fetch1/driver/3_startDelivery/startDelivery.html
+++ b/Fetch1/driver/3_startDelivery/startDelivery.html
@@ -19,8 +19,9 @@
 
         <div class="short"></div>
         <img ng-src="{{ start.pickSrc }}" class="wide"/><img ng-src="{{ start.dropSrc }}" class="wide"/>
+
+        <button ng-click="start.restart()">
+            !RESET!
+        </button>
     </div>
-    <button ng-click="start.restart()">
-        X
-    </button>
 </div>
