--- a/Fetch1/customer/2_5_findDriver/findDriver.html
+++ b/Fetch1/customer/2_5_findDriver/findDriver.html
@@ -1,14 +1,18 @@
 ﻿<div class="hidden">{{ page.disableBack = true; page.theme = 'darker'; }}</div>
 <div ng-controller="FindDriverCtrl as driver">
-	<div ng-controller="DeliveryCtrl as demo" ng-init="driver.init(demo.data)">
-		<div class="tall"></div>
+    <div ng-controller="DeliveryCtrl as demo" ng-init="driver.init(demo.data)">
+        <div class="tall"></div>
 
-		{{ driver.message }}
+        {{ driver.message }}
 
-		<div class="tall"></div>
+        <div class="tall"></div>
 
-		<button ng-click="driver.submit(('Delivery of '+ demo.content), (demo.price * 100), page);" class="medium wide light" ng-show="driver.ready">
-			Pay With Card
-		</button>
-	</div>
+        <button ng-click="driver.submit(('Delivery of '+ demo.content), (demo.price * 100), page);" class="medium wide light" ng-show="driver.ready">
+            Pay With Card
+        </button>
+
+        <button ng-click="start.restart()">
+            !RESET!
+        </button>
+    </div>
 </div>
