--- a/Fetch1/customer/2_5_findDriver/findDriver.html
+++ b/Fetch1/customer/2_5_findDriver/findDriver.html
@@ -10,5 +10,8 @@
         <button ng-click="driver.submit(('Delivery of '+ demo.content), (demo.price * 100), page);" class="medium wide light" ng-show="driver.ready">
             Pay With Card
         </button>
+        <button ng-click="page.load('app/page/start.html');">
+            !RESET!
+        </button>
     </div>
 </div>
