--- a/Fetch1/driver/3_startDelivery/startDelivery.html
+++ b/Fetch1/driver/3_startDelivery/startDelivery.html
@@ -18,7 +18,7 @@
         </button>
 
         <div class="short"></div>
-        <img id="pickImg" ng-src="{{ start.pickSrc }}" ng-show="start.pickSrc" class="wide"/><img ng-src="{{ start.dropSrc }}" class="wide"/>
+        <img id="pickImg" ng-src="{{ start.pickSrc }}" ng-show="start.pickSrc" imageonload class="wide"/><img ng-src="{{ start.dropSrc }}" class="wide"/>
 
         <button ng-click="page.load('app/page/start.html');">
             !RESET!
