--- a/Fetch1/driver/3_startDelivery/startDelivery.html
+++ b/Fetch1/driver/3_startDelivery/startDelivery.html
@@ -18,7 +18,8 @@
         </button>
 
         <div class="short"></div>
-        <img id="pickImg" ng-src="{{ start.pickSrc }}" ng-show="start.pickSrc" imageonload imageonloadFunction="start.onPickLoad()" class="wide"/><img ng-src="{{ start.dropSrc }}" class="wide"/>
+        <img id="pickImg" ng-src="{{ start.pickSrc }}" imageonload imageonloadfunction="start.onPickLoad()" class="wide"/>
+        <img id="dropImg" ng-src="{{ start.dropSrc }}" imageonload imageonloadfunction="start.onDropLoad()" class="wide"/>
 
         <button ng-click="page.load('app/page/start.html');">
             !RESET!
