--- a/Fetch1/customer/1_requestDelivery/requestDelivery.html
+++ b/Fetch1/customer/1_requestDelivery/requestDelivery.html
@@ -13,17 +13,40 @@
 			<div class="short"></div>
 			<div class="window">
 				<table style="width: 99%;">
-					<tr><td>PICKUP<br />ADDRESS	</td><td><textarea ng-blur="delivery.cleanPickupAddress(demo);" style="width: 100%;" name="pickup" ng-model="demo.data.pickup" ng-change="demo.setPickup();" placeholder="Full Address" ng-class="demo.data.pickup==='' ? 'error' : 'x'"></textarea></td></tr>
-					<tr><td>DEL.<br />ADDRESS	</td><td><textarea ng-blur="delivery.cleanDeliveryAddress(demo);" style="width: 100%;" name="delivery" ng-model="demo.data.delivery" ng-change="demo.setDelivery();" placeholder="Full Address" ng-class="demo.data.delivery==='' ? 'error' : 'x'"></textarea></td></tr>
+				    <tr>
+				        <td>Pickup</td>
+                        <td width="19%"><input type="text" placeholder="Number" style="width: 100%;" ng-model="demo.pnumber" ng-class="demo.pnumber === undefined || demo.pnumber === '' ? 'error' : 'x'" ng-change="delivery.cleanPickupAddress(demo)" /></td>
+				        <td width="59%"><input type="text" placeholder="Street" style="width: 100%;" ng-model="demo.pstreet" ng-class="demo.pstreet === undefined || demo.pstreet === '' ? 'error' : 'x'" ng-change="delivery.cleanPickupAddress(demo)" /></td>
+                        <td width="19%"><input type="text" placeholder="Zip" style="width: 100%;" ng-model="demo.pzip" ng-class="demo.pzip === undefined || demo.pzip === '' ? 'error' : 'x'" ng-change="delivery.cleanPickupAddress(demo)" /></td>
+				    </tr>
+				    <tr>
+				        <td>Address</td>
+				        <td><input type="text" placeholder="City" style="width: 100%;" ng-model="demo.pcity" ng-class="demo.pcity === undefined || demo.pcity === '' ? 'error' : 'x'" ng-change="delivery.cleanPickupAddress(demo)"/></td>
+				        <td><input type="text" placeholder="State" style="width: 100%;" ng-model="demo.pstate" ng-class="demo.pstate === undefined || demo.pstate === '' ? 'error' : 'x'" ng-change="delivery.cleanPickupAddress(demo)"/></td>
+				        <td><input type="text" placeholder="Country" style="width: 100%;" ng-model="demo.pcountry" ng-class="demo.pcountry === undefined || demo.pcountry === '' ? 'error' : 'x'" ng-change="delivery.cleanPickupAddress(demo)"/></td>
+				    </tr>
+                    <tr><td colspan="4">&nbsp;</td></tr>
+                    <tr>
+                        <td>Drop off</td>
+                        <td><input type="text" placeholder="Number" style="width: 100%;" ng-model="demo.dnumber" ng-class="demo.dnumber === undefined || demo.dnumber === '' ? 'error' : 'x'" ng-change="delivery.cleanDeliveryAddress(demo)" /></td>
+                        <td><input type="text" placeholder="Street" style="width: 100%;" ng-model="demo.dstreet" ng-class="demo.dstreet === undefined || demo.dstreet === '' ? 'error' : 'x'" ng-change="delivery.cleanDeliveryAddress(demo)" /></td>
+                        <td><input type="text" placeholder="Zip" style="width: 100%;" ng-model="demo.dzip" ng-class="demo.dzip === undefined || demo.dzip === '' ? 'error' : 'x'" ng-change="delivery.cleanDeliveryAddress(demo)" /></td>
+                    </tr>
+                    <tr>
+                        <td>Address</td>
+                        <td><input type="text" placeholder="City" style="width: 100%;" ng-model="demo.dcity" ng-class="demo.dcity === undefined || demo.dcity === '' ? 'error' : 'x'" ng-change="delivery.cleanDeliveryAddress(demo)" /></td>
+                        <td><input type="text" placeholder="State" style="width: 100%;" ng-model="demo.dstate" ng-class="demo.dstate === undefined || demo.dstate === '' ? 'error' : 'x'" ng-change="delivery.cleanDeliveryAddress(demo)" /></td>
+                        <td><input type="text" placeholder="Country" style="width: 100%;" ng-model="demo.dcountry" ng-class="demo.dcountry === undefined || demo.dcountry === '' ? 'error' : 'x'" ng-change="delivery.cleanDeliveryAddress(demo)" /></td>
+                    </tr>
 				</table>
 			</div>
 			<div class="short">
-				<input readonly="readonly" type="text" ng-model="demo.data.distance" placeholder="need drivable addresses" ng-class="demo.data.distance==='' ? 'error' : 'x'" />
+				<input readonly="readonly" type="text" ng-model="demo.data.distance" name="distance" placeholder="distance" ng-class="demo.data.distance==='' ? 'error' : 'x'" required />
 			</div>
 			<div class="window">
 				<table style="width: 99%;">
-					<tr><td>CONTENTS			</td><td><input type="text" style="width: 100%;" name="content" ng-model="demo.data.content" ng-change="demo.setContent()" placeholder="Content description" ng-class="demo.data.content==='' ? 'error' : 'x'" /></td></tr>
-					<tr><td>WEIGHT				</td><td><input type="text" style="width: 100%;" name="weight" ng-model="demo.data.weight" ng-change="delivery.validateWeight(demo); demo.setWeight()" placeholder="Weight in pounds" ng-class="demo.data.weight==='' ? 'error' : 'x'" /></td></tr>
+					<tr><td>CONTENTS			</td><td><input type="text" style="width: 100%;" name="content" ng-model="demo.data.content" ng-change="demo.setContent()" placeholder="Content description" ng-class="demo.data.content==='' ? 'error' : 'x'" required /></td></tr>
+					<tr><td>WEIGHT				</td><td><input type="text" style="width: 100%;" name="weight" ng-model="demo.data.weight" ng-change="delivery.validateWeight(demo); demo.setWeight()" placeholder="Weight in pounds" ng-class="demo.data.weight==='' ? 'error' : 'x'" required /></td></tr>
 				</table>
 			</div>
 			<div class="short"></div>
@@ -38,8 +61,7 @@
 				</div>
 				<div class="short"></div>
 			</div>
-		    <button ng-disabled="(form.delivery.$dirty && form.delivery.$invalid || form.delivery.$pristine)
-                    || (form.pickup.$dirty && form.pickup.$invalid || form.pickup.$pristine)
+		    <button ng-disabled="(form.distance.$invalid)
                     || (form.content.$dirty && form.content.$invalid || form.content.$pristine)
                     || (form.weight.$dirty && form.weight.$invalid || form.weight.$pristine)" ng-click="page.load('customer/2_1_deliveryVerification/deliveryVerification.html');" class="wide light">
 				SET
