--- a/Fetch1/driver/2_viewDeliver/viewDelivery.html
+++ b/Fetch1/driver/2_viewDeliver/viewDelivery.html
@@ -14,13 +14,13 @@
 			<div class="short"></div>
 			<button class="skinnier medium dark fa fa-arrow-down"></button>
 			<span class="skinniest"></span>
-			<div class="window medium wider">
+			<div class="window medium wider" style="max-height: 44px">
 				Package to be picked up from {{ demo.data.pickup }}
 			</div>
 			<div class="short"></div>
 			<button class="skinnier medium dark fa fa-arrow-right"></button>
 			<span class="skinniest"></span>
-			<div class="window medium wider">
+			<div class="window medium wider" style="max-height: 44px">
 				Package will be delivered to {{ demo.data.delivery }}
 			</div>
 			<div class="short"></div>
