icon and error updates

--- a/Fetch1/index.html
+++ b/Fetch1/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" ng-app="Fetch1App" ng-controller="PageCtrl as page" ng-class="page.theme">
 <head>
 	<meta charset="utf-8">
 	<title>Fetch1</title>
 
 <!-- injected styles start -->
-	<link href="app/app.css?ver=201511091943" rel="stylesheet" />
-	<link href="app/page/animations.css?ver=201511091943" rel="stylesheet" />
+	<link href="app/app.css?ver=201512091943" rel="stylesheet" />
+	<link href="app/page/animations.css?ver=201512091943" rel="stylesheet" />
 <!-- injected styles end -->
 
 	<link href="resources/fonts/font-awesome.css" rel="stylesheet" />
@@ -20,32 +20,32 @@
 	<script src="https://maps.googleapis.com/maps/api/js?v=3"></script>
 
 <!-- injected scripts start -->
-	<script src="app/camera/cameraService.js?ver=201511091943"></script>
-	<script src="app/config/configService.js?ver=201511091943"></script>
-	<script src="app/device/deviceService.js?ver=201511091943"></script>
-	<script src="app/devicesTypes/android.js?ver=201511091943"></script>
-	<script src="app/directives/imageOnLoadDirective.js?ver=201511091943"></script>
-	<script src="app/directives/scriptInjectorDirective.js?ver=201511091943"></script>
-	<script src="app/enums/enumService.js?ver=201511091943"></script>
-	<script src="app/errorHandler/debugController.js?ver=201511091943"></script>
-	<script src="app/errorHandler/errorService.js?ver=201511091943"></script>
-	<script src="app/GPS/locationService.js?ver=201511091943"></script>
-	<script src="app/GPS/mapController.js?ver=201511091943"></script>
-	<script src="app/GPS/mapService.js?ver=201511091943"></script>
-	<script src="app/guid/guidService.js?ver=201511091943"></script>
-	<script src="app/memory/deliveryController.js?ver=201511091943"></script>
-	<script src="app/memory/MemorySrvc.js?ver=201511091943"></script>
-	<script src="app/page/authenticateController.js?ver=201511091943"></script>
-	<script src="app/page/pageController.js?ver=201511091943"></script>
-	<script src="customer/1_requestDelivery/requestDeliveryControler.js?ver=201511091943"></script>
-	<script src="customer/2_1_deliveryVerification/deliveryVerificationControler.js?ver=201511091943"></script>
-	<script src="customer/2_5_findDriver/findDriverControler.js?ver=201511091943"></script>
-	<script src="customer/3_trackMap/trackControler.js?ver=201511091943"></script>
-	<script src="customer/4_deliveredVerification/deliveredControler.js?ver=201511091943"></script>
-	<script src="driver/1_pickupMap/pickupMapControler.js?ver=201511091943"></script>
-	<script src="driver/2_viewDeliver/viewDeliveryControler.js?ver=201511091943"></script>
-	<script src="driver/3_startDelivery/startDeliveryControler.js?ver=201511091943"></script>
-	<script src="driver/4_drivenVerification/drivenControler.js?ver=201511091943"></script>
+	<script src="app/camera/cameraService.js?ver=201512091943"></script>
+	<script src="app/config/configService.js?ver=201512091943"></script>
+	<script src="app/device/deviceService.js?ver=201512091943"></script>
+	<script src="app/devicesTypes/android.js?ver=201512091943"></script>
+	<script src="app/directives/imageOnLoadDirective.js?ver=201512091943"></script>
+	<script src="app/directives/scriptInjectorDirective.js?ver=201512091943"></script>
+	<script src="app/enums/enumService.js?ver=201512091943"></script>
+	<script src="app/errorHandler/debugController.js?ver=201512091943"></script>
+	<script src="app/errorHandler/errorService.js?ver=201512091943"></script>
+	<script src="app/GPS/locationService.js?ver=201512091943"></script>
+	<script src="app/GPS/mapController.js?ver=201512091943"></script>
+	<script src="app/GPS/mapService.js?ver=201512091943"></script>
+	<script src="app/guid/guidService.js?ver=201512091943"></script>
+	<script src="app/memory/deliveryController.js?ver=201512091943"></script>
+	<script src="app/memory/MemorySrvc.js?ver=201512091943"></script>
+	<script src="app/page/authenticateController.js?ver=201512091943"></script>
+	<script src="app/page/pageController.js?ver=201512091943"></script>
+	<script src="customer/1_requestDelivery/requestDeliveryControler.js?ver=201512091943"></script>
+	<script src="customer/2_1_deliveryVerification/deliveryVerificationControler.js?ver=201512091943"></script>
+	<script src="customer/2_5_findDriver/findDriverControler.js?ver=201512091943"></script>
+	<script src="customer/3_trackMap/trackControler.js?ver=201512091943"></script>
+	<script src="customer/4_deliveredVerification/deliveredControler.js?ver=201512091943"></script>
+	<script src="driver/1_pickupMap/pickupMapControler.js?ver=201512091943"></script>
+	<script src="driver/2_viewDeliver/viewDeliveryControler.js?ver=201512091943"></script>
+	<script src="driver/3_startDelivery/startDeliveryControler.js?ver=201512091943"></script>
+	<script src="driver/4_drivenVerification/drivenControler.js?ver=201512091943"></script>
 <!-- injected scripts end -->
 </head>
 <body>
@@ -59,7 +59,7 @@
 	</nav>
 	<div id="content" class="slide-animate-container">
 		<div class="slide-animate" ng-class="page.animateMore" ng-include="page.template">
-			<img class="center-h" src="resources/screen/startscreen.png" />
+			<img class="center-h" src="resources/screen/road.png" />
 		</div>
 	</div>
 	<footer ng-controller="DebugCtrl as debug">
