lat long bug fix

--- a/Fetch1/index.html
+++ b/Fetch1/index.html
@@ -8,7 +8,7 @@
 	<link href="app/app.css?ver=201512091943" rel="stylesheet" />
 	<link href="app/page/animations.css?ver=201512091943" rel="stylesheet" />
 <!-- injected styles end -->
-
+    <link href="resources/normalCss/normalize.css" rel="stylesheet" />
 	<link href="resources/fonts/font-awesome.css" rel="stylesheet" />
 	<script src="https://js.stripe.com/v2/"></script>
 	<script src="https://checkout.stripe.com/checkout.js"></script>
