--- a/Fetch1/driver/4_drivenVerification/drivenVerification.html
+++ b/Fetch1/driver/4_drivenVerification/drivenVerification.html
@@ -1,8 +1,10 @@
 ﻿<div class="hidden">{{ page.disableBack = true; page.theme = 'dark city'; page.title = 'VERIFY SHIPMENT' }}</div>
 <div ng-controller="DrivenControler as del">
-	<div class="tall"></div>
+    <div class="tall"></div>
+    <div class="tall"></div>
+    <div class="tall"></div>
 	<div class="tall center-h">
-		<table class="center-h" style="width: 170px; background-color: white; color: black">
+		<table class="center-h" style="width: 170px; color: white">
 			<tr>
 				<td>F1 App</td>
 				<td>
@@ -31,7 +33,6 @@
 		<br />
 		<textarea style="width: 100%;" placeholder="Comments"></textarea>
 	</div>
-	<div class="tall"></div>
 	<button ng-click="page.load('app/page/start.html');" class="short wide stop">NO THANKS</button>
 	<span class="skinnier"></span>
 	<button ng-click="page.load('app/page/start.html');" class="short wide light">RATE</button>
