--- a/Fetch1/driver/2_viewDeliver/viewDelivery.html
+++ b/Fetch1/driver/2_viewDeliver/viewDelivery.html
@@ -33,7 +33,7 @@
 			<div class="window medium wider">
 				Payment ${{ (demo.data.price * config.driverCut).toFixed(2); }}
 			</div>
-			<button ng-click="page.back();" class="medium wide stop">
+			<button ng-click="page.load('driver/1_pickupMap/pickupMap.html');" class="medium wide stop">
 				REJECT
 			</button>
 			<span class="skinniest"></span>
