--- a/Fetch1/customer/2_1_deliveryVerification/deliveryVerification.html
+++ b/Fetch1/customer/2_1_deliveryVerification/deliveryVerification.html
@@ -25,7 +25,7 @@
 		<button class="skinnier medium dark fa fa-usd"></button>
 		<span class="skinniest"></span>
 		<div class="window medium wider">
-			Cost of shipment ${{ demo.data.price }}
+		    Suggested (${{ demo.data.suggested }})<br/>Your Price: <input type="text" value="${{ demo.data.price }}" />
 		</div>
 		<div class="short right-t">I VERIFY THIS</div>
 		<button ng-click="page.back();" class="medium wide stop">
